--- a/.github/workflows/linktic-prueba-deploy.yml
+++ b/.github/workflows/linktic-prueba-deploy.yml
@@ -1,7 +1,7 @@
 name: Linktic prueba deploy
 on: [push]
 jobs:
-  Explore-GitHub-Actions
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
