--- a/package.json
+++ b/package.json
@@ -7,27 +7,45 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
-    "sass-embedded": "^1.80.4",
     "axios": "^1.7.4",
+    "core-js": "^3.8.3",
+    "datatables.net-dt": "^2.0.8",
+    "datatables.net-responsive": "^3.0.2",
+    "datatables.net-select": "^2.0.3",
+    "datatables.net-vue3": "^3.0.1",
+    "firebase": "^11.0.2",
+    "pinia": "^2.1.7",
+    "register-service-worker": "^1.7.2",
+    "sass-embedded": "^1.80.4",
+    "sweetalert2": "^11.14.5",
+    "vue": "^3.2.13",
+    "vue-number-format": "^1.3.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@formkit/addons": "^1.2.2",
+    "@formkit/i18n": "^1.3.0",
+    "@formkit/icons": "^1.2.2",
+    "@formkit/tempo": "^0.1.1",
+    "@formkit/themes": "^1.2.2",
+    "@formkit/vue": "^1.6.9",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "^2.11.8",
+    "@types/firebase": "^2.4.32",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "bootstrap": "^5.3.3",
+    "datatables.net": "^2.0.5",
+    "datatables.net-bs5": "^2.0.5",
+    "datatables.net-responsive-dt": "^3.0.2",
     "path": "^0.12.7",
-    "sass": "^1.32.7",
     "resize-observer-polyfill": "^1.5.1",
-    "simplebar": "^6.2.7",
+    "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "simplebar": "^6.2.7",
     "typescript": "~4.5.5"
   }
 }
