--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "datatables.net-responsive": "^3.0.2",
     "datatables.net-select": "^2.0.3",
     "datatables.net-vue3": "^3.0.1",
+    "epic-spinners": "^2.0.0",
     "firebase": "^11.0.2",
+    "izitoast": "^1.4.0",
     "pinia": "^2.1.7",
     "register-service-worker": "^1.7.2",
     "sass-embedded": "^1.80.4",
