--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^10.0.0",
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
     "datatables.net-dt": "^2.0.8",
@@ -28,7 +29,7 @@
     "@formkit/addons": "^1.2.2",
     "@formkit/i18n": "^1.3.0",
     "@formkit/icons": "^1.2.2",
-    "@formkit/tempo": "^0.1.1",
+    "@formkit/tempo": "^0.1.2",
     "@formkit/themes": "^1.2.2",
     "@formkit/vue": "^1.6.9",
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -48,6 +49,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "simplebar": "^6.2.7",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-select": "^4.0.0-beta.6"
   }
 }
