--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "datatables.net-responsive": "^3.0.2",
     "datatables.net-select": "^2.0.3",
     "datatables.net-vue3": "^3.0.1",
+    "date-fns": "^4.1.0",
     "epic-spinners": "^2.0.0",
     "firebase": "^11.0.2",
     "izitoast": "^1.4.0",
@@ -49,7 +50,7 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "simplebar": "^6.2.7",
-    "typescript": "~4.5.5",
+    "typescript": "^5.6.3",
     "vue-select": "^4.0.0-beta.6"
   }
 }
